Fixes and improvement

--- a/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/gtk-3.0/gtk-widgets-assets-dark.css
@@ -344,6 +344,7 @@ radio row:selected:focus:checked:disabled.button.flat {
  * Entries *
  ***********/
 
+spinbutton,
 entry,
 switch trough,
 switch {
