--- a/gtk-3.0/gtk-main.css
+++ b/gtk-3.0/gtk-main.css
@@ -21,7 +21,7 @@
 
 @define-color theme_main_color #000000;
 
-@define-color view_color #ECECEC;
+@define-color view_color #303030;
 
 @define-color button_gradient_color_a #5F5F5F; /*shade(@theme_bg_color, 1.75);*/
 @define-color button_gradient_color_b #434343;
