--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -6,6 +6,10 @@
 	-GtkTextView-error-underline-color: @error_color;
 
 	-GtkScrolledWindow-scrollbar-spacing: 0;
+	/* Webkit and Firefox have problem with steppers
+	   and also with a negative margin for the slider */
+	-GtkScrollbar-has-backward-stepper: false;
+	-GtkScrollbar-has-forward-stepper: false;
 
 	-GtkToolItemGroup-expander-size: 12;
 	-GtkTreeView-expander-size: 13;
@@ -1332,8 +1336,12 @@ scrollbar trough {
 	border-style: none;
 	border-width: 0px;
 	background-image: linear-gradient(to bottom,
-	                                  shade(@theme_bg_color, 0.5),
-	                                  shade(@theme_bg_color, 1.7));
+	                                  @theme_bg_color,
+	                                  @theme_bg_color 33.32%,
+	                                  shade(@theme_bg_color, 0.5) 33.33%,
+	                                  shade(@theme_bg_color, 1.7) 66.66%,
+	                                  @theme_bg_color 66.67%,
+	                                  @theme_bg_color);
 	border-radius: 0px;
 }
 
@@ -1341,8 +1349,12 @@ scrollbar.vertical trough {
 	border-style: none;
 	border-width: 0px;
 	background-image: linear-gradient(to right,
-	                                  shade(@theme_bg_color, 0.5),
-	                                  shade(@theme_bg_color, 1.7));
+	                                  @theme_bg_color,
+	                                  @theme_bg_color 33.32%,
+	                                  shade(@theme_bg_color, 0.5) 33.33%,
+	                                  shade(@theme_bg_color, 1.7) 66.66%,
+	                                  @theme_bg_color 66.67%,
+	                                  @theme_bg_color);
 	border-radius: 0px;
 }
 
@@ -1359,7 +1371,7 @@ scrollbar slider {
 	border-radius: 0px;
 	border-width: 2px;
 	border-style: solid;
-	margin: -4px 0;
+	margin: 0px; /*-4px 0 */
 }
 
 scrollbar.vertical slider {
@@ -1373,7 +1385,7 @@ scrollbar.vertical slider {
 	border-radius: 0px;
 	border-width: 2px;
 	border-style: solid;
-	margin: 0px -4px;
+	margin: 0px; /*0px -4px*/
 }
 
 
