--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -619,12 +619,14 @@ levelbar.vertical block.empty {
 /**********
  * Frames *
  **********/
+frame > border, /* 3.22.24 */
 frame,
 .frame,
 calendar {
 	padding: 2px;
 }
 
+frame > border,
 frame,
 .frame {
 	color: @theme_fg_color;
@@ -2721,14 +2723,17 @@ decoration {
 	            0 3px 8px 3px black;
 
 	/* resize cursor area */
-	margin: 5px;
+	margin: 4px;
 }
 
 .window-frame.solid-csd,
 .solid-csd decoration {
 	/* resize cursor area */
-	margin: 5px;
-	box-shadow: none;
+	margin: 0;
+	padding: 4px;
+	background-color: @bg_color;
+	box-shadow: inset 0 0 1px 1px shade(@theme_bg_color, 0.6),
+	            inset 1px 1px 0 0 shade(@theme_bg_color, 1.4);
 }
 
 .titlebar .titlebutton {
