--- a/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/gtk-3.0/gtk-widgets-assets-dark.css
@@ -357,7 +357,7 @@ switch:checked {
 }
 
 frame > border, /* 3.22.24 */
-frame,
+/*frame,*/
 .frame,
 calendar.view {
     border-image: url("assets/frame-border-dark.svg") 1 / 1px stretch;
