Better tabs for Chromium

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -73,6 +73,10 @@
 	border-radius: 0px;
 }
 
+window.background.chromium {
+	background-color: #515152;
+}
+
 /* gucharmap uses fallback colors */
 .gtkstyle-fallback {
 	color: @theme_fg_color;
